syntax = "proto3";

package yandex.cloud.mdb.deploy.agent.internal.api.v1;
option go_package = "a.yandex-team.ru/cloud/mdb/deploy/agent/internal/api/v1;deploy_agent";

import "google/protobuf/timestamp.proto";

service CommandService {
  rpc Run(CommandRequest) returns (stream CommandResponse) {}
}

message CommandRequest {
  string id = 1;
  string cmd = 2;
  repeated string args = 3;
  string version = 4;
  bool progress = 5;
}

message CommandResponse {
  string id = 1;
  int32 pid = 2;
  string error = 3;
  int32 exit_code = 4;
  string stdout = 5;
  string stderr = 6;
  google.protobuf.Timestamp started_at = 7;
  google.protobuf.Timestamp finished_at = 8;
  string progress = 9;
}
